# spellbinder

./: .gitignore  Makefile  README.md  compile.py  main.py
app/: main.py
core/: datalayer.py  schema.py
llm/: prompt_manager.py  prompt_templates.py
spellbinder-llm/: pyproject.toml
spellbinder-llm/spellbinder_llm/: model_resolver.py  prompt_manager.py
spellbinder-llm/spellbinder_llm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
spellbinder-monolith/: .gitignore  README.md  pyproject.toml
spellbinder-monolith/core/: models.py
spellbinder-monolith/spellbinder_dev.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
spellbinder-monolith/testing/: testing.py
spellbinder-monolith/web/: Makefile
spellbinder-monolith/web/api/: entities.py  state.py  tools.py
spellbinder-monolith/web/static/css/: style.feature.css
spellbinder-monolith/web/static/js/: core.js
spellbinder-monolith/web/static/js/panels/: panel.editor.js  panel.texteditor.js
spellbinder-monolith/web/static/js/ui/: sortable.js  topbar.js
spellbinder-monolith/web/templates/: index.html
spellbinder-tools/: pyproject.toml
spellbinder-tools/spellbinder_tools/: bookshaper.py  bootstrap_register_existing_files.py  code_structure.py  generate_test_dataset.py  rebuild_file_registry.py
spellbinder-tools/spellbinder_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
spellbinder-util/: pyproject.toml
spellbinder-util/spellbinder_util/: db.py  embed_chunker.py  file_registry.py  vector_search.py
spellbinder-util/spellbinder_util.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
testing/: patch_for_embed_new_documents.txt  test_chapter.txt  test_embed_search.py  test_prompt_cost.py  (+2 more)
util/: db.py  (+4 more)
(+40 files in other folders)
